// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-2:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-success="true"] {
  border-color: #22674e;
}

.emotion-2[data-error="true"] {
  border-color: #b3144d;
}

.emotion-2:hover {
  border-color: #792dd4;
}

.emotion-2[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-2[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-size="large"] {
  font-size: 1rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div>
          <div
            class="emotion-2 emotion-3"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-4 emotion-5"
            >
              <input
                class="emotion-6 emotion-7"
                data-size="large"
                id=":r0:"
                name="test"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TagInputField > should render correctly with regex 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-5[data-success="true"] {
  border-color: #22674e;
}

.emotion-5[data-error="true"] {
  border-color: #b3144d;
}

.emotion-5:hover {
  border-color: #792dd4;
}

.emotion-5[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-5[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-7 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-12 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<<<<<<< HEAD
.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
=======
.emotion-15 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0.125rem;
}

<<<<<<< HEAD
.emotion-16:hover {
=======
.emotion-15:hover {
>>>>>>> 9245aa11b (feat: add more features)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.emotion-16:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-16:hover,
.emotion-16:active {
=======
.emotion-15:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-15:hover,
.emotion-15:active {
>>>>>>> 9245aa11b (feat: add more features)
  background: #e9eaeb;
  color: #222638;
}

<<<<<<< HEAD
.emotion-18 {
=======
.emotion-17 {
>>>>>>> 9245aa11b (feat: add more features)
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<<<<<<< HEAD
.emotion-18 .fillStroke {
=======
.emotion-17 .fillStroke {
>>>>>>> 9245aa11b (feat: add more features)
  stroke: currentColor;
  fill: none;
}

<<<<<<< HEAD
.emotion-18 path {
  fill: currentColor;
}

.emotion-20 {
=======
.emotion-17 path {
  fill: currentColor;
}

.emotion-19 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

<<<<<<< HEAD
.emotion-20::-webkit-input-placeholder {
  color: #727683;
}

.emotion-20::-moz-placeholder {
  color: #727683;
}

.emotion-20:-ms-input-placeholder {
  color: #727683;
}

.emotion-20::placeholder {
  color: #727683;
}

.emotion-20[data-size="large"] {
  font-size: 1rem;
}

.emotion-22 {
=======
.emotion-19::-webkit-input-placeholder {
  color: #727683;
}

.emotion-19::-moz-placeholder {
  color: #727683;
}

.emotion-19:-ms-input-placeholder {
  color: #727683;
}

.emotion-19::placeholder {
  color: #727683;
}

.emotion-19[data-size="large"] {
  font-size: 1rem;
}

.emotion-21 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

<<<<<<< HEAD
.emotion-24 {
=======
.emotion-23 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 1.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

<<<<<<< HEAD
.emotion-24:hover {
=======
.emotion-23:hover {
>>>>>>> 9245aa11b (feat: add more features)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.emotion-24:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-24:hover,
.emotion-24:active {
=======
.emotion-23:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-23:hover,
.emotion-23:active {
>>>>>>> 9245aa11b (feat: add more features)
  background: #e9eaeb;
  color: #222638;
}

<<<<<<< HEAD
.emotion-28 {
=======
.emotion-27 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

<<<<<<< HEAD
.emotion-28:hover {
=======
.emotion-27:hover {
>>>>>>> 9245aa11b (feat: add more features)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 emotion-4"
          for=":r2:"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-5 emotion-6"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-7 emotion-8"
            >
              <span
                class="emotion-9 emotion-10"
              >
<<<<<<< HEAD
                <div
                  class="emotion-10 emotion-11 emotion-3"
=======
                <span
                  class="emotion-11 emotion-12 emotion-4"
>>>>>>> 9245aa11b (feat: add more features)
                >
                  <div
                    class="emotion-13 emotion-1"
                  >
                    4
                  </div>
                </div>
                <button
                  aria-label="Close tag"
<<<<<<< HEAD
                  class="emotion-15 emotion-16 emotion-17"
=======
                  class="emotion-14 emotion-15 emotion-16"
>>>>>>> 9245aa11b (feat: add more features)
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
<<<<<<< HEAD
                    class="emotion-18 emotion-19"
=======
                    class="emotion-17 emotion-18"
>>>>>>> 9245aa11b (feat: add more features)
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </span>
              <input
<<<<<<< HEAD
                class="emotion-20 emotion-21"
=======
                class="emotion-19 emotion-20"
>>>>>>> 9245aa11b (feat: add more features)
                data-size="large"
                id=":r2:"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
<<<<<<< HEAD
              class="emotion-22 emotion-23"
            >
              <button
                aria-label="clear value"
                class="emotion-24 emotion-17"
                type="button"
              >
                <svg
                  class="emotion-18 emotion-19"
=======
              class="emotion-21 emotion-22"
            >
              <button
                aria-label="clear value"
                class="emotion-23 emotion-16"
                type="button"
              >
                <svg
                  class="emotion-17 emotion-18"
>>>>>>> 9245aa11b (feat: add more features)
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
<<<<<<< HEAD
        class="emotion-28 emotion-29"
=======
        class="emotion-27 emotion-28"
>>>>>>> 9245aa11b (feat: add more features)
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`TagInputField > should works with defaultValues 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-5[data-success="true"] {
  border-color: #22674e;
}

.emotion-5[data-error="true"] {
  border-color: #b3144d;
}

.emotion-5:hover {
  border-color: #792dd4;
}

.emotion-5[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-5[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-7 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-12 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<<<<<<< HEAD
.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-16 {
=======
.emotion-15 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0.125rem;
}

<<<<<<< HEAD
.emotion-16:hover {
=======
.emotion-15:hover {
>>>>>>> 9245aa11b (feat: add more features)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.emotion-16:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-16:hover,
.emotion-16:active {
=======
.emotion-15:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-15:hover,
.emotion-15:active {
>>>>>>> 9245aa11b (feat: add more features)
  background: #e9eaeb;
  color: #222638;
}

<<<<<<< HEAD
.emotion-18 {
=======
.emotion-17 {
>>>>>>> 9245aa11b (feat: add more features)
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<<<<<<< HEAD
.emotion-18 .fillStroke {
=======
.emotion-17 .fillStroke {
>>>>>>> 9245aa11b (feat: add more features)
  stroke: currentColor;
  fill: none;
}

<<<<<<< HEAD
.emotion-18 path {
  fill: currentColor;
}

.emotion-20 {
=======
.emotion-17 path {
  fill: currentColor;
}

.emotion-19 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

<<<<<<< HEAD
.emotion-20::-webkit-input-placeholder {
  color: #727683;
}

.emotion-20::-moz-placeholder {
  color: #727683;
}

.emotion-20:-ms-input-placeholder {
  color: #727683;
}

.emotion-20::placeholder {
  color: #727683;
}

.emotion-20[data-size="large"] {
  font-size: 1rem;
}

.emotion-22 {
=======
.emotion-19::-webkit-input-placeholder {
  color: #727683;
}

.emotion-19::-moz-placeholder {
  color: #727683;
}

.emotion-19:-ms-input-placeholder {
  color: #727683;
}

.emotion-19::placeholder {
  color: #727683;
}

.emotion-19[data-size="large"] {
  font-size: 1rem;
}

.emotion-21 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

<<<<<<< HEAD
.emotion-24 {
=======
.emotion-23 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: 1.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

<<<<<<< HEAD
.emotion-24:hover {
=======
.emotion-23:hover {
>>>>>>> 9245aa11b (feat: add more features)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.emotion-24:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-24:hover,
.emotion-24:active {
=======
.emotion-23:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-23:hover,
.emotion-23:active {
>>>>>>> 9245aa11b (feat: add more features)
  background: #e9eaeb;
  color: #222638;
}

<<<<<<< HEAD
.emotion-28 {
=======
.emotion-27 {
>>>>>>> 9245aa11b (feat: add more features)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

<<<<<<< HEAD
.emotion-28:hover {
=======
.emotion-27:hover {
>>>>>>> 9245aa11b (feat: add more features)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.emotion-28:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-28:hover,
.emotion-28:active {
=======
.emotion-27:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-27:hover,
.emotion-27:active {
>>>>>>> 9245aa11b (feat: add more features)
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 emotion-4"
          for=":r9:"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-5 emotion-6"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-7 emotion-8"
            >
              <span
                class="emotion-9 emotion-10"
              >
<<<<<<< HEAD
                <div
                  class="emotion-10 emotion-11 emotion-3"
=======
                <span
                  class="emotion-11 emotion-12 emotion-4"
>>>>>>> 9245aa11b (feat: add more features)
                >
                  <div
                    class="emotion-13 emotion-1"
                  >
                    First
                  </div>
                </div>
                <button
                  aria-label="Close tag"
<<<<<<< HEAD
                  class="emotion-15 emotion-16 emotion-17"
=======
                  class="emotion-14 emotion-15 emotion-16"
>>>>>>> 9245aa11b (feat: add more features)
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
<<<<<<< HEAD
                    class="emotion-18 emotion-19"
=======
                    class="emotion-17 emotion-18"
>>>>>>> 9245aa11b (feat: add more features)
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </span>
              <input
<<<<<<< HEAD
                class="emotion-20 emotion-21"
=======
                class="emotion-19 emotion-20"
>>>>>>> 9245aa11b (feat: add more features)
                data-size="large"
                id=":r9:"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
<<<<<<< HEAD
              class="emotion-22 emotion-23"
            >
              <button
                aria-label="clear value"
                class="emotion-24 emotion-17"
                type="button"
              >
                <svg
                  class="emotion-18 emotion-19"
=======
              class="emotion-21 emotion-22"
            >
              <button
                aria-label="clear value"
                class="emotion-23 emotion-16"
                type="button"
              >
                <svg
                  class="emotion-17 emotion-18"
>>>>>>> 9245aa11b (feat: add more features)
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
<<<<<<< HEAD
        class="emotion-28 emotion-29"
=======
        class="emotion-27 emotion-28"
>>>>>>> 9245aa11b (feat: add more features)
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
